# Fire-fighting-new

./: launch.sh
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin
devel/.private/hector_quadrotor_actions/: setup.sh
devel/.private/hector_quadrotor_controller_gazebo/: .catkin  .rosinstall
devel/.private/hector_quadrotor_controllers/: .rosinstall  local_setup.sh
devel/.private/hector_quadrotor_demo/: .catkin  .rosinstall  local_setup.sh
devel/.private/hector_quadrotor_description/: .catkin  .rosinstall
devel/.private/hector_quadrotor_gazebo/: .catkin  .rosinstall
devel/.private/hector_quadrotor_gazebo_plugins/: .rosinstall  local_setup.sh  setup.sh
devel/.private/hector_quadrotor_interface/: .catkin  local_setup.sh
devel/.private/hector_quadrotor_model/: .catkin  .rosinstall
devel/.private/hector_quadrotor_pose_estimation/: .rosinstall  local_setup.sh
devel/.private/hector_quadrotor_teleop/: .catkin  .rosinstall  setup.sh
devel/.private/hector_uav_msgs/: .catkin  .rosinstall  setup.sh
devel/.private/rviz_hector/: .catkin  local_setup.sh  setup.sh
devel/include/hector_uav_msgs/: Altimeter.h  AttitudeCommand.h  Compass.h  ControllerState.h  EnableMotors.h  EnableMotorsRequest.h  EnableMotorsResponse.h  HeadingCommand.h  HeightCommand.h  LandingAction.h  LandingActionFeedback.h  LandingActionGoal.h  LandingActionResult.h  LandingFeedback.h  LandingGoal.h  LandingResult.h  MotorCommand.h  MotorPWM.h  MotorStatus.h  PoseAction.h  PoseActionFeedback.h  PoseActionGoal.h  PoseActionResult.h  PoseFeedback.h  PoseGoal.h  PoseResult.h  PositionXYCommand.h  RC.h  RawImu.h  RawMagnetic.h  RawRC.h  RuddersCommand.h  ServoCommand.h  Supply.h  TakeoffAction.h  TakeoffActionFeedback.h  TakeoffActionGoal.h  TakeoffActionResult.h  TakeoffFeedback.h  TakeoffGoal.h  (+5 more)
devel/lib/hector_quadrotor_actions/: landing_action  pose_action  takeoff_action
devel/lib/hector_quadrotor_pose_estimation/: hector_quadrotor_pose_estimation
devel/lib/hector_quadrotor_teleop/: quadrotor_teleop
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  hector_quadrotor_actions.pc  hector_quadrotor_controller_gazebo.pc  hector_quadrotor_controllers.pc  hector_quadrotor_description.pc  hector_quadrotor_gazebo.pc  hector_quadrotor_gazebo_plugins.pc  hector_quadrotor_interface.pc  hector_quadrotor_model.pc  hector_quadrotor_pose_estimation.pc  hector_quadrotor_teleop.pc  hector_uav_msgs.pc  rviz_hector.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
logs/hector_quadrotor_controller_gazebo/: build.cmake.000.log.stderr
logs/hector_quadrotor_demo/: build.cmake.001.log.stderr
logs/hector_quadrotor_gazebo_plugins/: build.cmake.000.log.stderr
matlab_code/: PolyCentroid.m  Vornew.m  VoronoiBounded.m  gama.csv  trial_1.m  trial_2.m  voronoi_code.m
src/hector_quadrotor/hector_quadrotor_demo/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/hector_quadrotor/hector_uav_msgs/: CMakeLists.txt  gama.csv  imager.py  imager2.py  imager3.py  imager4.py  imager5.py  supertest.py  ty.py  tyty.py
src/hector_quadrotor/matlab_msg_gen_ros1/glnxa64/src/hector_uav_msgs/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
src/hector_quadrotor/matlab_msg_gen_ros1/glnxa64/src/hector_uav_msgs/m/+ros/+internal/+ros/+custommessages/+hector_uav_msgs/: altimeter.m  enableMotorsRequest.m  headingCommand.m  landingAction.m  landingActionFeedback.m  landingActionGoal.m  landingResult.m  motorPWM.m  poseActionFeedback.m  poseActionGoal.m  poseActionResult.m  poseFeedback.m  rC.m  rawMagnetic.m  rawRC.m  servoCommand.m  takeoffActionResult.m  takeoffFeedback.m  takeoffResult.m  yawrateCommand.m
src/hector_quadrotor/matlab_msg_gen_ros1/glnxa64/src/hector_uav_msgs/m/+ros/+msggen/+hector_uav_msgs/: ControllerState.m  EnableMotorsRequest.m  LandingActionResult.m  LandingResult.m  MotorCommand.m  MotorPWM.m  PoseActionFeedback.m  PoseActionResult.m  PoseFeedback.m  PoseGoal.m  PoseResult.m  PositionXYCommand.m  RawImu.m  RuddersCommand.m  Supply.m  TakeoffAction.m  TakeoffActionResult.m  TakeoffFeedback.m  ThrustCommand.m  VelocityXYCommand.m
src/hector_quadrotor/matlab_msg_gen_ros1/glnxa64/src/hector_uav_msgs/src/: hector_uav_msgs_Altimeter_message.cpp  hector_uav_msgs_AttitudeCommand_message.cpp  hector_uav_msgs_Compass_message.cpp  hector_uav_msgs_ControllerState_message.cpp  hector_uav_msgs_EnableMotors_service.cpp  hector_uav_msgs_HeadingCommand_message.cpp  hector_uav_msgs_HeightCommand_message.cpp  hector_uav_msgs_LandingActionFeedback_message.cpp  hector_uav_msgs_LandingActionGoal_message.cpp  hector_uav_msgs_LandingActionResult_message.cpp  hector_uav_msgs_LandingAction_message.cpp  hector_uav_msgs_Landing_action.cpp  hector_uav_msgs_MotorCommand_message.cpp  hector_uav_msgs_MotorPWM_message.cpp  hector_uav_msgs_MotorStatus_message.cpp  hector_uav_msgs_PoseActionFeedback_message.cpp  hector_uav_msgs_PoseActionGoal_message.cpp  hector_uav_msgs_PoseActionResult_message.cpp  hector_uav_msgs_PoseAction_message.cpp  hector_uav_msgs_Pose_action.cpp  hector_uav_msgs_PositionXYCommand_message.cpp  hector_uav_msgs_RC_message.cpp  hector_uav_msgs_RawImu_message.cpp  hector_uav_msgs_RawMagnetic_message.cpp  hector_uav_msgs_RawRC_message.cpp  hector_uav_msgs_RuddersCommand_message.cpp  hector_uav_msgs_ServoCommand_message.cpp  hector_uav_msgs_Supply_message.cpp  hector_uav_msgs_TakeoffActionFeedback_message.cpp  hector_uav_msgs_TakeoffActionGoal_message.cpp  hector_uav_msgs_TakeoffActionResult_message.cpp  hector_uav_msgs_TakeoffAction_message.cpp  hector_uav_msgs_Takeoff_action.cpp  hector_uav_msgs_ThrustCommand_message.cpp  hector_uav_msgs_VelocityXYCommand_message.cpp  hector_uav_msgs_VelocityZCommand_message.cpp  hector_uav_msgs_YawrateCommand_message.cpp
src/rviz_hector/: CMakeLists.txt  rviz_config.rviz
(+476 files in other folders)
